Skip API version check for Azurite

--- a/charts/azurite/templates/01-deployment.yaml
+++ b/charts/azurite/templates/01-deployment.yaml
@@ -46,6 +46,7 @@ spec:
             - --tableHost
             - "0.0.0.0"
             - --loose
+            - --skipApiVersionCheck
             - --disableProductStyleUrl
             {{- if .Values.debug.enable }}
             - --debug
